# CodingTeamTest

./: .gitignore  pyproject.toml
codingtest/codingtest/: settings.py  urls.py
codingtest/testjob/: apps.py  serializers.py  urls.py  views.py
